# gpt4-telegram-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
gpt4_telegram_bot/: gpt4_telegram_bot.py  healtcheck_service.py  openai_constants.py  profanity_filter.py  telegram_constants.py
gpt4_telegram_bot/resources/: profanity_wordlist.txt
